更新工具库的说明
更新工具库的说明

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 	<script src="utils.js"></script>
 </head>
 <body>
-	
+	<code>
+		var json = '{"name": "iamxiaoma", "age": 25}';
+		console.log(window._jsutils.parseHelper.parseJSON(json));
+	</code>
+
+
+	<script type="text/javascript">
+
+	var json = '{"name": "iamxiaoma", "age": 25}';
+	console.log("parseHelper.parseJSON", window._jsutils.parseHelper.parseJSON(json));
+
+	</script>
 </body>
 </html>
